# shop-api

./: README.md  main.py  pyproject.toml  run.py
server/: database.py
server/models/: order.py  product.py  user.py
server/routes/: admin.py  auth.py  shop.py
